--- a/Kaggle Practice/12_Sentiment_Analysis/Sentiment_Analysis.ipynb
+++ b/Kaggle Practice/12_Sentiment_Analysis/Sentiment_Analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "array(['cab', 'call', 'me', 'please', 'tonight', 'you'], dtype=object)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "\twith 9 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "       [0, 1, 1, 2, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "2    0     1   1       2        0    0"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "array([[0, 1, 1, 1, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "0    0     1   1       1        0    0"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "4                        Sons of ****,  negative  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "4   Sons of ****, why couldn`t they put them on t...  negative"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "freq                                       1     11117"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "positive     1  "
       ]
      },
-     "execution_count": 233,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "4   Sons of ****, why couldn`t they put them on t...  negative              2"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        "4              75  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
        "Text(0.5, 0, 'Message Length')"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "4              75  "
       ]
      },
-     "execution_count": 238,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "4              75  sons put releases already bought  "
       ]
      },
-     "execution_count": 239,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1329,11 +1329,19 @@
     }
    ],
    "source": [
+    "import pickle\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "# Fit the CountVectorizer to the training data\n",
     "vect = CountVectorizer()\n",
     "vect.fit(X_train)\n",
+    "\n",
+    "# Save the fitted vocabulary in the current directory\n",
+    "pickle.dump(vect, open(\"my_vect.pkl\", \"wb\"))\n",
+    "\n",
+    "# Load the fitted vocabulary from the current directory\n",
+    "# vect = pickle.load(open(\"my_vect.pkl\", \"rb\"))\n",
+    "\n",
     "\n",
     "# Learn training data vocabulary, then use it to create a document-term matrix\n",
     "X_train_dtm = vect.transform(X_train)\n",
@@ -1351,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1369,7 @@
        "\twith 147576 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1403,19 +1411,19 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 10 ms\n"
+      "Wall time: 9.16 ms\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-6 {color: black;background-color: white;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MultinomialNB()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MultinomialNB</label><div class=\"sk-toggleable__content\"><pre>MultinomialNB()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "MultinomialNB()"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1528,16 +1536,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['my_best_sentiment_model_1695566256.8833115.sav']"
+       "['my_best_sentiment_model_1695639295.5186925.sav']"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
